Changed html background color

--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
     <script>
       var unityInstance = UnityLoader.instantiate("unityContainer", "Build/WEBGL-github.json", {onProgress: UnityProgress});
     </script>
+    <style>
+      body {
+        background-color: rgb(65, 65, 65);
+      }
+    </style>
   </head>
   <body>
     <div class="webgl-content">
